# ros-video-recorder

./: .gitignore  CMakeLists.txt  LICENSE  package.xml  setup.py
launch/: example_video_record.launch
scripts/: ros_record_video.py
scripts/src/recorder/: recorder.py  video_recorder.py
src/recorder/: video_recorder.py
