<?xml version="1.0"?>
<package format="2">
  <name>ros_video_recorder</name>
  <version>0.0.0</version>
  <description>The ros_video_recorder package</description>
  <maintainer email="ahamden@usc.edu">Adam Hamden</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python-opencv</exec_depend>
</package>
